Vista de Categorías. Vista de Productos (sin filtrado). Menú contextual con Portal. Cálculo de subtotal por producto en /products.

--- a/carrito2023/.gitignore
+++ b/carrito2023/.gitignore
@@ -22,4 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-Trabajo_Final_Info_React_23.pdf
+
+# Other files
+.eslintrc.cjs
+package-lock.json
+tsconfig.json
+tsconfig.node.json
+
